--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "demo",
-  "version": "1.10",
+  "version": "1.1",
   "description": "Dashboard Demo",
   "main": "index.js",
   "scripts": {
+    "start": "node app",
+    "postinstall": "gulp default",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "daniel",
