--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Dashboard Demo",
   "main": "index.js",
   "scripts": {
+    "build": "gulp",
     "start": "node app",
     "postinstall": "gulp default",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -62,6 +63,20 @@
     "dropzone": "^5.5.1",
     "fullcalendar": "^3.10.0",
     "gmaps": "^0.4.24",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-file-include": "^2.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-newer": "^1.4.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sequence": "^1.0.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-cli": "^3.9.1",
     "handlebars": "^4.1.2",
     "jquery": ">=3.4.0",
